--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="top-banner">
+<section class="top-banner flexible-section">
     <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="orange-color">Anwar Jahid </span>World!</h1>
@@ -25,7 +25,7 @@
         </div>
 </section>
 
-<section class="dream-banner">
+<section class="dream-banner flexible-section">
     <div class="half-width">
         <img src="images/jahid-mid-bg.png" alt="">
     </div>
@@ -37,6 +37,21 @@
         <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
     </div>
         
+</section>
+<section>
+    <h1>Experience</h1>
+    <div class="flexible-section">
+        <div class="half-width">
+            <h1>Full Stack Web Devoloper</h1>
+            <h3>2016-Present | Pro Level Devoloper</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quas quis perferendis velit ipsum soluta nostrum impedit dolorum sunt veritatis, libero facere molestiae possimus fugiat delectus, eaque, consectetur corrupti adipisci.</p>
+        </div>
+        <div class="half-width">
+            <h1>Baby Web Devoloper</h1>
+            <h3>2022-Present | Learning Programming Hero</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quas quis perferendis velit ipsum soluta nostrum impedit dolorum sunt veritatis, libero facere molestiae possimus fugiat delectus, eaque, consectetur corrupti adipisci.</p>
+        </div>
+    </div>
 </section>
 
 </body>
