experience area style

--- a/index.html
+++ b/index.html
@@ -38,21 +38,24 @@
     </div>
         
 </section>
-<section>
+<section class="experience-area">
     <h1>Experience</h1>
     <div class="flexible-section">
-        <div class="half-width">
-            <h1>Full Stack Web Devoloper</h1>
-            <h3>2016-Present | Pro Level Devoloper</h3>
+        <div id="full-stack-devoloper" class="experience-item">
+            <h2>Full Stack Web Devoloper</h2>
+            <h3 class="orange-color">2016-Present | Pro Level Devoloper</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quas quis perferendis velit ipsum soluta nostrum impedit dolorum sunt veritatis, libero facere molestiae possimus fugiat delectus, eaque, consectetur corrupti adipisci.</p>
         </div>
-        <div class="half-width">
-            <h1>Baby Web Devoloper</h1>
-            <h3>2022-Present | Learning Programming Hero</h3>
+        <div id="baby-web-devoloper" class="experience-item">
+            <h2>Baby Web Devoloper</h2>
+            <h3 class="orange-color">2022-Present | Learning Programming Hero</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut quas quis perferendis velit ipsum soluta nostrum impedit dolorum sunt veritatis, libero facere molestiae possimus fugiat delectus, eaque, consectetur corrupti adipisci.</p>
         </div>
     </div>
 </section>
+<footer>
+    <p>Copy Right 2022 by @anwarjahid</p>
+</footer>
 
 </body>
 </html>
